--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
             <li>Next.js</li>
             <li>Figma</li>
             <li>Canva / Illustrator</li>
+            <li>Tailwind CSS</li>
+            <li>Bootstrap</li>
         </ul>
     </section>
 
@@ -62,7 +64,7 @@
                 <h3>Website Sekolah</h3>
                 <p>Proyek ini dibuat untuk keperluan sekolah seperti profil sekolah, galeri kegiatan, dan formulir
                     pendaftaran online.</p>
-                <p><strong>Teknologi:</strong> Laravel, MySQL, Figma</p>
+                <p><strong>Teknologi:</strong> Laravel, Tailwind CSS, MySQL, Figma</p>
                 <!-- <a href="https://www.smkkesehatancianjur.sch.id/">Kunjungi</a> Ganti dengan link kamu nanti -->
             </div>
             <div class="project-img">
@@ -132,8 +134,7 @@
             <h3>Front-end Developer <span>@ Freelance</span></h3>
             <p class="exp-date">2023 – Sekarang</p>
             <p class="exp-desc">
-                Saya mengerjakan UI yang diberikan oleh tim UI atau mengerjakan desain yang diberikan oleh klien secara
-                langsung.
+                Saya mengerjakan pengembangan website yang dimulai dari tahap perancangan hingga implementasi desain sesuai permintaan klien.
             </p>
         </div>
         
@@ -182,7 +183,19 @@
                 <h3>Belajar Dasar Pemrograman Web</h3>
                 <p><strong>Lembaga:</strong> Dicoding</p>
                 <p><strong>Tahun:</strong> 2024</p>
-                <a href="https://www.dicoding.com/certificates/6RPNR6RQRX2M" target="_blank">Lihat Sertifikat</a>
+                <!-- <a href="https://www.dicoding.com/certificates/6RPNR6RQRX2M" target="_blank">Lihat Sertifikat</a> -->
+            </div>
+        </div>
+        <div class="certificate-card">
+            <div class="cert-image">
+                <img src="img/SertiCodeCamp.jpg"
+                    alt="Sertifikat Free CodeCamp – Responsive Web Design" />
+            </div>
+            <div class="cert-info">
+                <h3>Responsive Web Design</h3>
+                <p><strong>Lembaga:</strong> FreeCodeCamp</p>
+                <p><strong>Tahun:</strong> 2023</p>
+                <!-- <a href="https://www.dicoding.com/certificates/6RPNR6RQRX2M" target="_blank">Lihat Sertifikat</a> -->
             </div>
         </div>
     </section>
@@ -190,13 +203,13 @@
     <section id="contact" class="section">
         <h2>Kontak</h2>
         <p class="contact-item">📧 Email: <a href="mailto:muhhilmiabdulaziz@gmail.com">muhhilmiabdulaziz@gmail.com</a></p>
-        <p class="contact-item">💻 GitHub: <a href="https://github.com/FrostLeaf15" target="_blank">@FrostLeaf15</a></p>
+        <p class="contact-item">💻 GitHub: <a href="https://github.com/MuhHilmi" target="_blank">@MuhHilmi</a></p>
         <p class="contact-item">📸 Instagram: <a href="https://instagram.com/mhilmi_aa" target="_blank">@mhilmi_aa</a>
         </p>
     </section>
 
     <footer>
-        <p>© 2025 <strong>Muh Hilmi Abdul Aziz.</strong> All rights reserved.</p>
+        <p>© 2024 <strong>Muh Hilmi Abdul Aziz.</strong> All rights reserved.</p>
     </footer>
 
     <script>
